# crewai_learn

./: README.md  pyproject.toml
src/course_dlai/: C1M1_Lab_1_content_creation.ipynb
