[project]
name = "legal_agentic"
version = "0.1.0"
description = "Legal agentic app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.201.1",
 "crewai[tools]>=1.1.0", 
 "langchain-openai>=0.3.35",
 "langchain-community>=0.0.26",
 "langchain-core>=0.0.26",
 "openai>=1.109.1",
]

[project.scripts]
start = "src.main:start"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "notebook>=7.5.0",
]
